Changes to conversion from OAS to Spring.  Custom implementation for Repository class.
