# src/main/resources/api/openapi.yaml
@@ -5,22 +5,23 @@ info:
 tags:
   - name: cart
     description: Everything about cart
+    externalDocs:
+      description: Find out more (extra document link)
+      url: http://swagger.io
   - name: order
     description: Operation about orders
-  - name: user
-    description: Operations about users
   - name: customer
     description: Operations about user's persona customer
   - name: address
     description: Operations about user's address
   - name: payment
     description: Operations about payments
-  - name: shipping
-    description: Operations about shipping
+  - name: shipment
+    description: Operations about shippings
   - name: product
     description: Operations about products
-  - name: card
-    description: card operation
+  - name: user
+    description: Operations about signup, signin and so on
 
 paths:
   /api/v1/carts/{customerId}:
@@ -43,17 +44,13 @@ paths:
           content:
             application/xml:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Cart'
+                $ref: '#/components/schemas/Cart'
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Cart'
+                $ref: '#/components/schemas/Cart'
         404:
           description: Given customer ID doesn't exist
-          content: {}
+          content: { }
     delete:
       tags:
         - cart
@@ -72,7 +69,7 @@ paths:
           description: successful operation
         404:
           description: Given customer ID doesn't exist
-          content: {}
+          content: { }
   /api/v1/carts/{customerId}/items:
     get:
       tags:
@@ -103,7 +100,7 @@ paths:
                   $ref: '#/components/schemas/Item'
         404:
           description: Given customer ID doesn't exist
-          content: {}
+          content: { }
     post:
       tags:
         - cart
@@ -142,7 +139,7 @@ paths:
                   $ref: '#/components/schemas/Item'
         404:
           description: Given customer ID doesn't exist
-          content: {}
+          content: { }
     put:
       tags:
         - cart
@@ -181,7 +178,7 @@ paths:
                   $ref: '#/components/schemas/Item'
         404:
           description: Given customer ID doesn't exist
-          content: {}
+          content: { }
   /api/v1/carts/{customerId}/items/{itemId}:
     get:
       tags:
@@ -208,17 +205,13 @@ paths:
           content:
             application/xml:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Item'
+                $ref: '#/components/schemas/Item'
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Item'
+                $ref: '#/components/schemas/Item'
         404:
           description: Given item (product) ID doesn't exist
-          content: {}
+          content: { }
     delete:
       tags:
         - cart
@@ -245,7 +238,7 @@ paths:
     post:
       tags:
         - order
-      summary:  Creates a new order for the given order request
+      summary: Creates a new order for the given order request
       description: Creates a new order for the given order request.
       operationId: addOrder
       requestBody:
@@ -263,17 +256,13 @@ paths:
           content:
             application/xml:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/Order'
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/Order'
         406:
           description: If payment is not authorized.
-          content: {}
+          content: { }
     get:
       tags:
         - order
@@ -303,14 +292,14 @@ paths:
                   $ref: '#/components/schemas/Order'
         404:
           description: Order doesn't exist for given user.
-          content: {}
+          content: { }
   /api/v1/orders/{id}:
     get:
       tags:
         - order
       summary: Returns the order of given order ID
       description: Returns orders of given order ID
-      operationId: getOrdersByOrderId
+      operationId: getByOrderId
       parameters:
         - name: id
           in: path
@@ -330,7 +319,7 @@ paths:
                 $ref: '#/components/schemas/Order'
         404:
           description: Order doesn't exist for given user.
-          content: {}
+          content: { }
   /api/v1/customers:
     get:
       tags:
@@ -392,14 +381,14 @@ paths:
       responses:
         202:
           description: Request accepted, returns this status even if user does not exist
-          content: {}
+          content: { }
   /api/v1/customers/{id}/cards:
     get:
       tags:
         - customer
       summary: Returns all customer's cards
       description: Returns all customer's cards based on given customer ID
-      operationId: getCardsByCustomerId
+      operationId: getCardByCustomerId
       parameters:
         - name: id
           in: path
@@ -437,7 +426,9 @@ paths:
           content:
             application/xml:
               schema:
-                $ref: '#/components/schemas/Address'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Address'
             application/json:
               schema:
                 $ref: '#/components/schemas/Address'
@@ -526,7 +517,7 @@ paths:
       responses:
         202:
           description: Accepts the deletion request and perform deletion. If ID does not exist, does nothing.
-          content: {}
+          content: { }
   /api/v1/cards:
     get:
       tags:
@@ -551,8 +542,8 @@ paths:
     post:
       tags:
         - card
-      summary: Creates a  new card
-      description: Creates a new card. or replaces the existing one
+      summary: Creates a new user addresses
+      description: Creates a new user addresses. Does nothing if address already exists.
       operationId: registerCard
       requestBody:
         content:
@@ -612,7 +603,7 @@ paths:
       responses:
         202:
           description: Accepts the deletion request and perform deletion. If ID does not exist, does nothing.
-          content: {}
+          content: { }
   /api/v1/payments:
     post:
       tags:
@@ -645,7 +636,7 @@ paths:
       description: Return the payment authorization for the specified order
       operationId: getOrdersPaymentAuthorization
       parameters:
-        - name: id
+        - name: orderId
           in: query
           description: Order Identifier
           required: true
@@ -657,14 +648,10 @@ paths:
           content:
             application/xml:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Authorization'
+                $ref: '#/components/schemas/Authorization'
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Authorization'
+                $ref: '#/components/schemas/Authorization'
   /api/v1/shipping:
     post:
       tags:
@@ -681,8 +668,8 @@ paths:
             schema:
               $ref: '#/components/schemas/ShippingReq'
       responses:
-        200:
-          description: For successful fetch.
+        201:
+          description: For successful post.
           content:
             application/xml:
               schema:
@@ -690,15 +677,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Authorization'
+  /api/v1/shipping/{id}:
     get:
       tags:
-        - shipping
+        - shipment
       summary: Return the Shipment
       description: Return the Shipment for the specified order
       operationId: getShipmentByOrderId
       parameters:
         - name: id
-          in: query
+          in: path
           description: Order Identifier
           required: true
           schema:
@@ -791,12 +779,107 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
+  /api/v1/users:
+    post:
+      tags:
+        - user
+      summary: Signup the a new customer (user)
+      description: Creates a new customer (user), who can login and do the shopping.
+      operationId: signUp
+      requestBody:
+        content:
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        201:
+          description: For successful user creation.
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
+  /api/v1/auth/token:
+    post:
+      tags:
+        - user
+      summary: Signin the customer (user)
+      description: Signin the customer (user) that generates the JWT (access token) and refresh token, which can be used for accessing APIs.
+      operationId: signIn
+      requestBody:
+        content:
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/SignInReq'
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignInReq'
+      responses:
+        200:
+          description: For user sign-in. Once successful, user receives the access and refresh token.
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
+    delete:
+      tags:
+        - user
+      summary: Signouts the customer (user)
+      description: Signouts the customer (user). It removes the refresh token from DB. Last issued JWT should be removed from client end that if not removed last for given expiration time.
+      operationId: signOut
+      requestBody:
+        content:
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/RefreshToken'
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshToken'
+      responses:
+        202:
+          description: Accepts the request for logout.
+  /api/v1/auth/token/refresh:
+    post:
+      tags:
+        - user
+      summary: Provides new JWT based on valid refresh token.
+      description: Provides new JWT based on valid refresh token.
+      operationId: getAccessToken
+      requestBody:
+        content:
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/RefreshToken'
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshToken'
+      responses:
+        200:
+          description: For successful operation.
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
 components:
   schemas:
     Cart:
       description: Shopping Cart of the user
       type: object
       properties:
+        id:
+          description: Cart Identifier
+          type: string
         customerId:
           description: Id of the customer who possesses the cart
           type: string
@@ -812,14 +895,22 @@ components:
         id:
           description: Item Identifier
           type: string
+        name:
+          description: Item name
+          type: string
+        description:
+          description: Item description
+          type: string
+        imageUrl:
+          description: Item image URL
+          type: string
         quantity:
           description: The item quantity
           type: integer
           format: int32
         unitPrice:
           description: The item's price per unit
-          type: number
-          format: double
+          $ref: '#/components/schemas/BigDecimal'
     Order:
       description: Represents an order
       type: object
@@ -844,8 +935,7 @@ components:
             $ref: '#/components/schemas/Item'
         total:
           description: Order total
-          type: number
-          format: double
+          $ref: '#/components/schemas/BigDecimal'
         payment:
           $ref: '#/components/schemas/Payment'
         shipment:
@@ -875,6 +965,9 @@ components:
     Address:
       type: object
       properties:
+        id:
+          description: Order identifier
+          type: string
         number:
           description: house of flat number
           type: string
@@ -901,14 +994,19 @@ components:
     Card:
       type: object
       properties:
+        id:
+          description: Order identifier
+          type: string
         cardNumber:
           description: Card Number
           type: string
         expires:
           description: Expiration date
           type: string
-        ccv:
-          description: CCV code
+        cvv:
+          description: CVV code
+          type: string
+        userId:
           type: string
       xml:
         name: Card
@@ -919,12 +1017,15 @@ components:
         - type: object
           properties:
             userId:
-              type: object
+              type: string
       xml:
         name: AddCardReq
     Payment:
       type: object
       properties:
+        id:
+          description: Order identifier
+          type: string
         authorized:
           description: Flag that specified whether payment is authorized or not
           type: boolean
@@ -936,8 +1037,8 @@ components:
     Shipment:
       type: object
       properties:
-        orderId:
-          description: Order Identifier
+        id:
+          description: Shipment Identifier
           type: string
         carrier:
           description: Shipping Carrier
@@ -971,8 +1072,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
         username:
           type: string
         firstName:
@@ -986,33 +1086,36 @@ components:
         phone:
           type: string
         userStatus:
-          type: integer
-          description: User Status
-          format: int32
+          type: string
+        addressId:
+          type: string
+        cardId:
+          type: string
       xml:
         name: User
     NewOrder:
       description: Contains the new order request information
       type: object
       properties:
-        customer:
-          #description: URI that should be used to fetch the customer
-          $ref: '#/components/schemas/URI'
+        customerId:
+          type: string
         address:
-          #description: URI that should be used to fetch the address
-          $ref: '#/components/schemas/URI'
+          $ref: '#/components/schemas/Address'
         card:
-          #description: URI that should be used to fetch the payment card
-          $ref: '#/components/schemas/URI'
+          $ref: '#/components/schemas/Card'
         items:
-          #description: URI that should be used to fetch the items from shopping cart
-          $ref: '#/components/schemas/URI'
+          description: Items in shopping cart
+          type: array
+          items:
+            $ref: '#/components/schemas/Item'
       xml:
         name: NewOrder
     URI:
       type: object
       xml:
         name: URI
+    BigDecimal:
+      type: BigDecimal
     Authorization:
       type: object
       properties:
@@ -1049,8 +1152,7 @@ components:
           $ref: '#/components/schemas/Card'
         amount:
           description: Payment amount
-          type: number
-          format: double
+          $ref: '#/components/schemas/BigDecimal'
       xml:
         name: PaymentReq
     CustomerInfoOnCard:
@@ -1083,8 +1185,7 @@ components:
           type: string
         price:
           description: Product price
-          type: number
-          format: double
+          $ref: '#/components/schemas/BigDecimal'
         count:
           description: Product count
           type: integer
@@ -1092,6 +1193,48 @@ components:
         tag:
           description: Tags associated with the product
           type: array
-          uniqueItems: true
           items:
-            type: string
+            $ref: '#/components/schemas/Tag'
+    Tag:
+      description: Tag information
+      type: object
+      properties:
+        id:
+          description: Tag identifier
+          type: string
+        name:
+          description: Tag Name
+          type: string
+    SignInReq:
+      description: Request body for Sign-in
+      type: object
+      properties:
+        username:
+          description: username of the User
+          type: string
+        password:
+          description: password of the User
+          type: string
+    SignedInUser:
+      description: Signed-in user information
+      type: object
+      properties:
+        refreshToken:
+          description: Refresh Token
+          type: string
+        accessToken:
+          description: JWT Token aka access token
+          type: string
+        username:
+          description: User Name
+          type: string
+        userId:
+          description: User Identifier
+          type: string
+    RefreshToken:
+      description: Contains the refresh token
+      type: object
+      properties:
+        refreshToken:
+          description: Refresh Token
+          type: string
